chore: 🤖 target dir cache handling

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,16 @@ jobs:
       - name: Rust toolchain
         run: .github/scripts/rust-toolchain.sh
 
+      - name: Target dir cache
+        id: target-dir-cache
+        uses: actions/cache@v2
+        with:
+          path: target
+          key: cache-${{ runner.os }}-target-dir-cache-${{ hashFiles('cargo.lock') }}
+
+      - name: Target dir clean
+        if: steps.target-dir-cache.outputs.cache-hit != 'true'
+        run: cargo clean
+
       - name: Test runner
-        run: cargo test
+        run: cargo test --no-run
