--- a/xtc-history/e2e/Cargo.toml
+++ b/xtc-history/e2e/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 
 [dependencies]
 xtc-history = {path="../xtc-history"}
-xtc-history-types = {path="../xtc-history-types"}
+xtc-history-common = {path= "../xtc-history-common" }
 ic-cdk = "0.3.0"
 ic-cdk-macros = "0.3.0"
 serde = { version="1.0.116", features = ["derive"] }
