--- a/xtc-history/xtc-history/Cargo.toml
+++ b/xtc-history/xtc-history/Cargo.toml
@@ -11,3 +11,4 @@ xtc-history-common = {path= "../xtc-history-common" }
 ic-cdk = "0.3.0"
 serde = { version="1.0.116", features = ["derive"] }
 serde_bytes = "0.11"
+async-std = { version="1.9.0", features = ["attributes"] }
