--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 members = [
     "xtc",
     "piggy-bank",
+#    History
+    "xtc-history/xtc-history",
+    "xtc-history/xtc-history-bucket",
+    "xtc-history/xtc-history-common",
+    "xtc-history/e2e",
 ]
 
 [profile.release]
