--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -50,7 +50,7 @@ jobs:
           key: cache-${{ runner.os }}-target-dir-cache-${{ hashFiles('cargo.lock') }}
 
       - name: Target dir clean
-        if: steps.target-dir-cache.outputs.cache-hit != 'true' || steps.target-clean-cache.outputs.cache-hit != 'true'
+        # if: steps.target-dir-cache.outputs.cache-hit != 'true' || steps.target-clean-cache.outputs.cache-hit != 'true'
         run: cargo clean
 
       - name: Build
