--- a/xtc/Cargo.toml
+++ b/xtc/Cargo.toml
@@ -11,6 +11,8 @@ serde_bytes = "0.11"
 ic-kit = "0.4.2"
 ic-cdk = "0.3.1"
 serde = { version="1.0.130", features = ["derive"] }
+derive_builder = "0.10.2"
+derive-new = "0.5"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 async-std = { version="1.10.0", features = ["attributes"] }
