Update CI workflow to resolve syntax errors

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,7 +22,8 @@ jobs:
     
     - name: Clippy Check
       uses: actions-rs/clippy-check@v1
-      args: -- -D warnings
+      with:
+        args: -- -D warnings
 
   test:
 
