Add secret to the clippy run

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,6 +23,7 @@ jobs:
     - name: Clippy Check
       uses: actions-rs/clippy-check@v1
       with:
+        token: ${{ secrets.GITHUB_TOKEN }}
         args: -- -D warnings
 
   test:
