Build / fetch from cache before doing clippy step
Turns out that clippy needs to build the program, didn't know this since I had previously ran `node build.js` on my local machine and never cleaned.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,7 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  lint:
+  formatting:
 
     runs-on: ubuntu-latest
 
@@ -19,12 +19,50 @@ jobs:
 
     - name: Formatting Check
       run: cargo fmt --all -- --check
-    
-    - name: Clippy Check
-      uses: actions-rs/clippy-check@v1
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        args: -- -D warnings
+      
+  clippy:
+
+    runs-on: ubuntu-latest
+
+    container:
+      image: ghcr.io/psychedelic/dank-explorer-ci:latest
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.PRIVATE_ACCESS_TOKEN }}
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Rust toolchain
+        run: .github/scripts/rust-toolchain.sh
+
+      - name: Target clean cache
+        id: target-clean-cache
+        uses: actions/cache@v2
+        with:
+          path: .github/target_clean
+          key: cache-${{ runner.os }}-target-clean-cache-${{ hashFiles('.github/target_clean') }}
+
+      - name: Target dir cache
+        id: target-dir-cache
+        uses: actions/cache@v2
+        with:
+          path: target
+          key: cache-${{ runner.os }}-target-dir-cache-${{ hashFiles('cargo.lock') }}
+
+      - name: Target dir clean
+        # if: steps.target-dir-cache.outputs.cache-hit != 'true' || steps.target-clean-cache.outputs.cache-hit != 'true'
+        run: cargo clean
+
+      - name: Build
+        run: node build.js
+
+      - name: clippy
+        uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: -- -D warnings
+      
 
   test:
 
