--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,16 @@
 members = [
     "xtc",
     "piggy-bank",
+    "sdr",
 #    History
     "xtc-history/xtc-history",
     "xtc-history/xtc-history-bucket",
     "xtc-history/xtc-history-common",
     "xtc-history/e2e",
+    "sdr-history/sdr-history",
+    "sdr-history/sdr-history-bucket",
+    "sdr-history/sdr-history-common",
+    "sdr-history/e2e",
 ]
 
 [profile.release]
