--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [workspace]
 members = [
     "piggy-bank",
-    "xdr",
+    "sdr",
 #    History
-    "xdr-history/xdr-history",
-    "xdr-history/xdr-history-bucket",
-    "xdr-history/xdr-history-common",
-    "xdr-history/e2e",
+    "sdr-history/sdr-history",
+    "sdr-history/sdr-history-bucket",
+    "sdr-history/sdr-history-common",
+    "sdr-history/e2e",
 ]
 
 [profile.release]
