--- a/xtc/Cargo.toml
+++ b/xtc/Cargo.toml
@@ -9,6 +9,7 @@ xtc-history = {path="../xtc-history/xtc-history"}
 xtc-history-common = {path= "../xtc-history/xtc-history-common" }
 serde_bytes = "0.11"
 ic-kit = "0.4.2"
+ic-kit-sys = "0.1.1"
 ic-cdk = "0.3.1"
 serde = { version="1.0.130", features = ["derive"] }
 derive_builder = "0.10.2"
